<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app -->
    <string name="app_name">Areabase</string>

    <!-- actions -->
    <string name="action_settings">Settings</string>
    <string name="action_locate">Locate</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_search_hint">Postcode or area name&#8230;</string>

    <!-- messages -->
    <string name="toast_mapview_not_loading">Could not load the map view.</string>
    <string name="error_illegal_url_title">Something is trying to open in the map area.</string>
    <string name="error_illegal_url_formatstring">This should not happen. If you think this is not a problem, here is the url: %1$s</string>
    <string name="error_illegal_url_response_dontgo">Stay in Areabase</string>
    <string name="error_illegal_url_response_open">Open in browser (caution)</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="error_cannot_fetch_area_data">Sorry, data about this area could not be fetched.</string>
    <string name="error_cannot_fetch_area_data_body">Please make sure you are connected to the Internet and try again later. The message associated with this error is: %1$s. Hope this helps.</string>
    <string name="summaryactivity_cardmaker_ioerror">Please check your connection.</string>
    <string name="summaryactivity_cardmaker_ioerror_body">Ensure that you have some form of connectivity enabled. If you are using an authenticated proxy, Areabase will not work.</string>
    <string name="summaryactivity_cardmaker_onserror">Error processing ONS data. Sorry :(</string>
    <string name="summaryactivity_cardmaker_servicedisconnect_title">Oh noes!</string>
    <string name="summaryactivity_cardmaker_servicedisconnect_message">An important component of Areabase, %1$s, just broke. The app will probably crash and burn soon. Sorry :(</string>
    <string name="summaryactivity_cardmaker_values_not_available">Areabase may not work correctly in certain areas, mostly Scotland and Northern Ireland. Office for National Statistics does not cover Scotland and NI, and Scottish National Statistics does not provide a way Areabase can access its data. Police data is not available for Northern Ireland. Lastly, datasets may not be complete in any of these databases.</string>
    <string name="error_cannot_resolve_postcode">Could not resolve the postcode.</string>
    <string name="error_cannot_resolve_postcode_body">The postcode for your location appears invalid. This could be because of how Google Geocoder returns postcodes. Try to walk to a different location and press the "Locate" button.</string>

    <!-- navigation -->
    <string name="navdrawer_secheader_basic_info">This area</string>
    <string name="caption_summary">Summary</string>
    <string name="caption_crime">Crime</string>
    <string name="caption_economy">Economy</string>
    <string name="caption_environment">Environment</string>
    <string name="navdrawer_secheader_more_data">Explore data</string>
    <string name="caption_ONS">Office for National Statistics</string>
    <string name="caption_Police">Police.uk</string>
    <string name="navdrawer_secheader_misc">Miscellaneous</string>
    <string name="caption_area_hierarchy">Hierarchy</string>
    <string name="caption_area_compare">Compare areas</string>

    <!-- preferences -->
    <string name="title_activity_settings">Preferences</string>
    <!-- preferences -> location -->
    <string name="pref_category_location_heading">Location</string>
    <string name="pref_category_location_autoLocate_primaryText">Automatically find location</string>
    <string name="pref_category_location_autoLocate_infoText_enabled">Areabase will automatically find your location on startup.</string>
    <string name="pref_category_location_autoLocate_infoText_disabled">Areabase will wait until you press &quot;Locate&quot; to find your location.</string>
    <string name="pref_category_location_backgroundRefix_primaryText">Update location in the background</string>
    <string name="pref_category_location_backgroundRefix_infoText_enabled">Areabase will keep your location up-to-date by querying GPS periodically.</string>
    <string name="pref_category_location_backgroundRefix_infoText_disabled">Areabase will not keep track of your location. This may save battery, but &quot;Locate&quot; may take longer.</string>
    <!-- preferences -> testing -->
    <string name="pref_category_testing_heading">Experimental</string>
    <string name="pref_category_testing_phoneHome_primaryText">Report crashes</string>
    <string name="pref_category_testing_phoneHome_infoText_enabled">If the application crashes, an automatic report will be sent to the developer.</string>
    <string name="pref_category_testing_phoneHome_infoText_disabled">Areabase will not send anything to the developer. You want to turn this on though.</string>

    <!-- cards -->
    <!-- cards -> demographics -->
    <string name="card_demographics_title">People of %1$s</string>
    <string name="card_demographics_title_base">%1$s is a demographically %2$s area.</string>

    <string-array name="card_demographics_pop_size_trend_descriptors">
        <item>collapsing</item>
        <item>declining</item>
        <item>stable</item>
        <item>growing</item>
        <item>booming</item>
    </string-array>

    <string name="card_demographics_body_base">There is %1$s and average age is %2$.1f. The area is %3$s.</string>

    <string-array name="card_demographics_sex_dominance_descriptors">
        <item>significantly more women</item>
        <item>more women</item>
        <item>gender balance</item>
        <item>more men</item>
        <item>significantly more men</item>
    </string-array>
    <string-array name="card_demographics_pop_density_descriptors">
        <item>very sparsely populated</item>
        <item>sparsely populated</item>
        <item>normally populated</item>
        <item>densely populated</item>
        <item>very densely populated</item>
    </string-array>

    <!-- cards -> economy -->
    <string name="card_economy_title">Economy of %1$s</string>
    <string name="card_economy_body_base">Most of people in %1$s are %2$s. Most people here work in %3$s. The average income is %4$s national average and %5$s.</string>

    <string-array name="card_economy_compare_income_with_national">
        <item>much lower than</item>
        <item>lower than</item>
        <item>on par with</item>
        <item>higher than</item>
        <item>much higher than</item>
    </string-array>
    <string-array name="card_economy_income_trend">
        <item>sharply falling</item>
        <item>falling</item>
        <item>stable</item>
        <item>rising</item>
        <item>sharply rising</item>
    </string-array>
    
    <!-- cards -> crime (real, ie via police data) -->
    <string name="card_crime_real_title">Crime in %1$s</string>
    <string name="card_crime_real_body_base">The most commonly reported type of crime here is %1$s. Crime overall is %2$s.</string>
    <string-array name="card_crime_real_trend">
        <item>sharply falling</item>
        <item>falling</item>
        <item>stable</item>
        <item>rising</item>
        <item>sharply rising</item>
    </string-array>
    
    <string name="card_environ_title">Environment in %1$s</string>
    <string name="card_environ_body_base">%1$s is %2$s area. Energy use as of %3$s was %4$.1f MWh, and it is %5$s.</string>
    <string-array name="card_environ_area_types">
        <item>a rural</item>
        <item>an urban</item>
        <item>an highly urban</item>
    </string-array>
    <string-array name="card_environ_energy_trend">
        <item>quickly decreasing</item>
        <item>decreasing</item>
        <item>not changing</item>
        <item>increasing</item>
        <item>quickly increasing</item>
    </string-array>

    <string name="card_error_values_not_available_title">Some data for this area is not available.</string>
    <string name="card_error_values_not_available_body">Some areas may be missing data in the ONS database; Scotland and Northern Ireland are not supported.</string>
    <string name="a11y_cd_areabase_icon">The Areabase icon</string>

</resources>